--- a/css/style.css
+++ b/css/style.css
@@ -13173,9 +13173,9 @@ input[type="button"].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: #0b0b0b;
   background-clip: border-box;
-  border: 1px solid #e4e6f6;
+  border: 1px solid #2f2f33;
   border-radius: 0;
 }
 
@@ -18301,7 +18301,7 @@ a.text-light:hover, a.text-light:focus {
 }
 
 .text-dark {
-  color: #001737 !important;
+  color: #fff !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
@@ -18313,7 +18313,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted, .preview-list .preview-item .preview-item-content p .content-category {
-  color: #666666 !important;
+  color: #d5d2d2 !important;
 }
 
 .text-black-50 {
@@ -18995,7 +18995,7 @@ code {
 
 /* Footer */
 .footer {
-  background: #fff;
+  background: #030303;
   padding: 1.5rem 2.5rem;
   transition: all 0.25s ease;
   -moz-transition: all 0.25s ease;
@@ -20075,7 +20075,7 @@ code {
 }
 
 .card .card-title {
-  color: #001737;
+  color: #fff;
   margin-bottom: .5rem;
   text-transform: capitalize;
   font-size: 0.875rem;
@@ -21737,7 +21737,7 @@ dl li {
 }
 
 .content-wrapper {
-  background: #f4f7fa;
+  background: #151516;
   padding: 2.5rem 2.5rem;
   width: 100%;
   -webkit-flex-grow: 1;
